--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -36,7 +36,7 @@
         <hr>
 
         <!-- user settings form -->
-        <form>
+        <!-- <form>
           <fieldset>
         
             <div class="control-group">
@@ -66,7 +66,7 @@
             </div>
 
           </fieldset>
-        </form>
+        </form> -->
         <!-- end user settings form -->
 
       </div>
