second stage in setting app settings & changing settings in app is functional

--- a/war/js/views/logout.html
+++ b/war/js/views/logout.html
@@ -1,6 +1,6 @@
 <!-- loggin-out -->
 <div id="loggin-out">
   <span class="entypo">&#9203;</span>
-  <p>Logging you out..</p>
+  <!-- <p>Logging you out..</p> -->
 </div>
 <!-- end loggin-out -->
