--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -35,9 +35,9 @@
 
           <!-- REMOVE -->
           <!-- build settings resource for users -->
-          <button type="submit" 
+          <!-- <button type="submit" 
                   ng-click="buildSettingsForUsers()" 
-                  class="btn btn-warning pull-right">Build Settings</button>
+                  class="btn btn-warning pull-right">Build Settings</button> -->
 
         </div>
         <hr>
