--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -99,7 +99,7 @@
 
 <!-- download mobile app -->
 <div id="download">
-	<button class="btn btn-success btn-large" type="button">
+	<button class="btn btn-success btn-large" type="button" bs-tooltip="ui.downloads.app">
 		<!-- <span class="entypo">&#128241;</span> -->
 		<!-- <i class="icon-download icon-white"></i> -->
 		{{ui.login.downloadApp}}
