--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -331,7 +331,8 @@
       <li>
         <a href="#statisticsTab" 
             data-toggle="tab"
-            ng-click="fixTabHeight('statisticsTab')"><span class="entypo">&#128200;</span> {{ui.planboard.statistics}}</a>      </li>
+            ng-click="fixTabHeight('statisticsTab')"><span class="entypo">&#128200;</span> {{ui.planboard.statistics}}</a>
+      </li>
     </ul>
     <!-- end tabs -->
 
